<resources>
    <string name="app_name">GameHall</string>

    <string name="hot_game">热门游戏</string>
    <string name="tv_game">电视游戏</string>
    <string name="hand_game">手柄游戏</string>
    <string name="peripheral_game">外设游戏</string>
    <string name="game_peripheral">游戏外设</string>
    <string name="all_game">全部游戏</string>
    <string name="role_strategy">角色策略</string>
    <string name="chess_game">棋牌游戏</string>
    <string name="leisure_puzzle">休闲益智</string>
    <string name="flight_shooting">飞行射击</string>
    <string name="act_adventure">动作冒险</string>
    <string name="sports">体育竞技</string>
    <string name="children_intelligence">儿童益智</string>

    <string name="game_search">搜索</string>


    <string name="game_down">下载</string>
    <string name="game_down_success">下载成功</string>
    <string name="game_downing">下载中</string>
    <string name="game_keep">继续</string>
    <string name="game_install">正在安装</string>
    <string name="game_open">运行</string>
    <string name="game_introduction">游戏介绍</string>
    <string name="game_screenshot">游戏截图</string>
    <string name="game_related">相关游戏</string>
    <string name="game_star">%1$s分</string>
    <string name="game_downnum">下载：%1$s次</string>
    <string name="game_type">分类：%1$s\u0020\u0020\u0020\u0020操作：</string>



</resources>
