<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.MainActivity">

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Hello World!" />-->
    <com.game.hall.gamehall.widget.detail.TitleLine
        android:id="@+id/titleline"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:divided="3"
        app:dividedHight="20dp"
        app:dividedColor="@color/colorBlue"
        app:bg_color="@color/colorGrayWhite"
        app:bg_height="10dp"
        />

    <com.dd.processbutton.iml.ActionProcessButton

        android:id="@+id/game_down"
        android:layout_width="100dp"
        android:layout_height="30dp"
        style="@style/detail_down"
        android:text="@string/game_down"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:pb_colorComplete="@color/colorYellow"
        app:pb_colorNormal="@color/colorBlue"
        app:pb_colorPressed="@color/colorBlueLight"
        app:pb_colorProgress="@color/colorOrange"
        app:pb_textComplete="@string/game_install"
        app:pb_textProgress="@string/game_downing" />

</RelativeLayout>
