<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/game_detail_icon"
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_detail_title"
                style="@style/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="天天飞车" />

            <RatingBar
                android:id="@+id/game_detail_ratingbar"
                style="@style/roomRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="4"/>
            <TextView
                android:id="@+id/game_detail_star"
                style="@style/detail_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="@id/game_detail_ratingbar"
                android:layout_="@id/game_detail_title"
                android:text="@string/game_star" />

            <TextView
                android:id="@+id/game_detail_downnum"
                style="@style/detail_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/game_detail_star"
                android:text="@string/game_downnum" />

            <TextView
                android:id="@+id/game_detail_type"
                style="@style/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/game_detail_downnum"
                android:text="@string/game_type"
                android:textSize="13sp" />

            <Button
                android:id="@+id/game_down"
                style="@style/detail_title"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_below="@id/game_detail_type"
                android:background="@drawable/button_selector_blue"
                android:text="@string/game_down"
                android:textSize="15sp" />

            <Button
                android:id="@+id/game_intc"
                style="@style/detail_title"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="@id/game_down"
                android:layout_below="@id/game_detail_type"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@id/game_down"
                android:background="@drawable/button_selector_blue"
                android:text="@string/game_introduction"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        style="@style/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/game_screenshot"
        android:textSize="15sp" />

    <com.game.hall.gamehall.widget.detail.TitleLine
        android:id="@+id/titile_screenshot"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        app:bg_color="@color/colorGrayWhite"
        app:bg_height="10dp"
        app:divided="3"
        app:dividedColor="@color/colorBlue"
        app:dividedHight="20dp" />

    <com.game.hall.gamehall.widget.detail.ScreenShotScollView
        android:id="@+id/scroll_screenshot"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        app:interval="3dp"
        app:itemHeight="110dp"
        app:itemWidth="145dp" />


    <TextView
        style="@style/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/game_related"
        android:textSize="15sp" />

    <com.game.hall.gamehall.widget.detail.TitleLine
        android:id="@+id/titile_related"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:bg_color="@color/colorGrayWhite"
        app:bg_height="10dp"
        app:divided="3"
        app:dividedColor="@color/colorBlue"
        app:dividedHight="20dp" />

    <com.game.hall.gamehall.widget.detail.ScreenShotScollView
        android:id="@+id/scroll_related"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:interval="3dp"
        app:itemHeight="110dp"
        app:itemWidth="110dp" />

</LinearLayout>